--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="email=no,telephone=no,address=no">
+  <title>獅龍牙のHP</title>
+  <meta name="description" content="獅龍牙のHPです。（現在作成中）" />
+<!-- <link rel="icon" href="favicon.ico" /> -->
+<!-- <link rel="apple-touch-icon" href="webclip.png" /> -->
+  <meta property="og:site_name" content="獅龍牙のHP" />
+  <meta property="og:title" content="獅龍牙のHP" />
+  <meta property="og:description" content="獅龍牙のHPです。（現在作成中）" />
+  <meta property="og:url" content="https://siryuuga.github.io/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ja_JP" />
+<!-- <meta property="og:image" content="URL" /> -->
+  <meta name="twitter:card" content="summary_large_image" />
+<!-- <meta name="twitter:site" content="@twitter_id" /> -->
+<!-- <meta name="twitter:description" content="ページの説明" /> -->
+<!-- <meta name="twitter:image:src" content="URL" /> -->
+<meta name="msapplication-TileImage" content="画像のURL">
+<meta name="msapplication-TileColor" content="背景色"/>
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P07X4E4F4N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P07X4E4F4N');
+</script>
+<body>
+  <div>
+    <h1>獅龍牙のHP</h1>
+    <p>作成中</p>
+  </div>
+</body>
+</html>
