--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="language" content="Japanese">
+  <meta http-equiv="content-language" content="ja">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="email=no,telephone=no,address=no">
   <title>獅龍牙のHP</title>
@@ -19,8 +21,8 @@
 <!-- <meta name="twitter:site" content="@twitter_id" /> -->
 <!-- <meta name="twitter:description" content="ページの説明" /> -->
 <!-- <meta name="twitter:image:src" content="URL" /> -->
-<meta name="msapplication-TileImage" content="画像のURL">
-<meta name="msapplication-TileColor" content="背景色"/>
+<!-- <meta name="msapplication-TileImage" content="画像のURL"> -->
+<!-- <meta name="msapplication-TileColor" content="背景色"/> -->
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-P07X4E4F4N"></script>
